fix: minor styling alignment

--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -28,7 +28,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
-    margin-top: 12px;
+    margin-top: 1rem;
     background: none;
     border: none;
 
